<resources>
    <string name="app_name">Watchlist Live</string>
    <string name="movies">Movies</string>
    <string name="tv_show">TV Shows</string>
    <string name="tv_shows">TV Shows</string>
    <string name="name">Name</string>
    <string name="genres_label">Genres</string>
    <string name="genres">Genre 1, Genre 2, Genre 3, …</string>
    <string name="year">Year</string>
    <string name="backdrop">backdrop</string>
    <string name="textview">textview</string>
    <string name="overview">Overview</string>
    <string name="split">|</string>
    <string name="user_vote">User Vote</string>
    <string name="years">XXXX </string>
    <string name="score">score</string>
    <string name="sharebtn">sharebtn</string>
    <string name="favbtn">favbtn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="swipe">Swipe left or right to delete</string>
    <string name="deletebtn">deletebtn</string>
    <string name="button_sort">Button Sort</string>
</resources>